# eclipse-score_inc_someip_gateway

./: .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  .yamlfmt  AGENTS.md  MODULE.bazel  README.md  REUSE.toml  project_config.bzl  pyproject.toml  python_requirements_lock.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_fix.md  improvement.md
.github/instructions/: architecture.md  build-and-test.md
.github/skills/fix-failing-test/: SKILL.md
.github/workflows/: build_and_test_cross_compilation.yml  build_and_test_host.yml  build_and_test_qnx.yml  ci.yml  ci_pull_request_target.yml  copilot-setup-steps.yml  copyright.yml  docs-cleanup.yml  docs.yml  format.yml  gitlint.yml  license_check.yml  pr-title-semantic.yaml  pre-commit.yml
bazel/tools/: json_schema_validator.bzl  someip_config.bzl
deployment/: BUILD.bazel  defs.bzl  run_gateway.sh
docs/: index.rst
docs/architecture/: index.rst
examples/: BUILD.bazel
examples/car_window_sim/src/: car_window.rs  car_window_controller.rs  car_window_types.rs
memory_profile/: PERFORMANCE_ANALYSIS.md  PROFILING_REPORT.md  README.md  massif.out  massif.out.1  massif.out.135696  run_massif_gateway_benchmark.sh
profiling/: benchmark_event_transmission_client_to_server_analysis.md
src/common/: BUILD.bazel  constants.h  someip_error.cpp
src/config/: BUILD.bazel  mw_someip_config.fbs  mw_someip_config.json  mw_someip_config.schema.json
src/gateway_ipc_binding/: README.md
src/gateway_ipc_binding/benchmark/: BUILD  event_transmission_benchmark_context.hpp  event_transmission_client_to_server_benchmark.cpp  event_transmission_client_to_server_memory.cpp  read_only_memory_managers_benchmark.cpp
src/gateway_ipc_binding/doc/: ipc_protocol.md  shared_memory.md
src/gateway_ipc_binding/src/: binding_base.cpp  binding_base.hpp  connections.hpp  error.cpp  gateway_ipc_binding.cpp  gateway_ipc_binding_client.cpp  gateway_ipc_binding_server.cpp  gateway_ipc_binding_util.hpp  key.hpp  reply_channel.hpp  request_service_handle.hpp  service_state.hpp  shared_memory_managers.hpp  shared_memory_payload.hpp  shared_memory_slot_manager.cpp
src/gateway_ipc_binding/test/: bidirectional_int_test.cpp  bidirectional_many_events_int_test.cpp  client_server_test.cpp  main.cpp  many_clients_int_test.cpp  many_services_int_test.cpp  mocks.hpp  shared_memory_slot_manager_test.cpp  subscribe_find_service_int_test.cpp  test_constants.hpp  (+4 more)
src/gatewayd/: BUILD.bazel  local_service_instance.cpp  local_service_instance.h  main.cpp  remote_service_instance.cpp  remote_service_instance.h
src/socom/test/unit/: BUILD  CMakeLists.txt  client_tests.cpp  connection_tests.cpp  event_tests.cpp  identity_tests.cpp  interface_compatibility_tests.cpp  method_call_tests.cpp  mock_tests.cpp  multi_connection_tests.cpp  multiple_runtimes_tests.cpp  payload_tests.cpp  runtime_tests.cpp  server_tests.cpp  service_interface_configuration_tests.cpp  smoke_test.cpp
src/someipd/: BUILD.bazel  main.cpp  routing.cpp  routing.h
tests/benchmarks/: BUILD.bazel  benchmarks_analysis.md  echo_service.h  ipc_benchmarks.cpp
tests/integration/: vsomeip.json
tests/rust/: test_main.rs
(+56 files in other folders)
